css/style.css
/* ... */
.filter fieldset {
    display: inline-block;
    vertical-align: top;
    margin: 0 15px 38px 0;
}

.filter fieldset:last-of-type {
    margin-bottom: 0;
}

.filter legend {
    position: absolute;
    font-size: 14px;
    line-height: 16px;
    font-weight: 500;
    white-space: nowrap;
}

.sort-by-type {
    position: relative;
    font-size: 0;
    border: none;
}

.sort-by-type legend {
    max-width: 170px;
    bottom: 45px;
    left: 15px;
}

.sort-by-type-list {
    max-width: 210px;
    margin: 0;
    padding: 8px 30px 12px 15px;
    font-size: 16px;
    font-weight: 500;
    color: #fff;
    background: rgba(255, 255, 255, 0.25);
    border: none;
    border-radius: 20px;
    outline: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    appearance: none;
    cursor: pointer;
}

.sort-by-type::after {
    position: absolute;
    content: "";
    right: 16px;
    bottom: 16px;
    width: 0;
    height: 0;
    border: 5px solid white;
    border-left-width: 4px;
    border-right-width: 4px;
    border-bottom: 0;
    border-left-color: transparent;
    border-right-color: transparent;
    pointer-events: none;
}

.sort-by-type:hover .sort-by-type-list {
    background: #fff;
    color: #000;
}

.sort-by-type:hover::after {
    border-top-color: #000;
}

.sort-by-price {
    position: relative;
    width: 195px;
    border: none;
    height: 38px;
    padding: 0 15px;
    background: rgba(255, 255, 255, 0.25);
    border-radius: 20px;
}

.sort-by-price legend {
    max-width: 195px;
    bottom: 43px;
    left: 15px;
}

.sort-by-price .max-price,
.sort-by-price .min-price {
    width: 60px;
    font-size: 14px;
    line-height: 16px;
    font-weight: 500;
    color: #fff;
    background: transparent;
    border: none;
    border-radius: 3px;
    outline: none;
}

.scale {
    position: absolute;
    content: "";
    left: 15px;
    right: 15px;
    top: 50%;
    height: 4px;
    font-size: 0;
    -webkit-transform: translateY(-50%);
            transform: translateY(-50%);
    background: rgba(255, 255, 255, 0.5);
}

.scale-white {
    display: inline-block;
    position: relative;
    height: 4px;
    width: 105px;
    margin: 0 0 18px;
    background: #fff;
}

.toggle {
    display: inline-block;
    width: 20px;
    height: 20px;
    border-radius: 50%;
    background: #fff;
    cursor: pointer;
}

.toggle-left {
    -webkit-transform: translate(50%, -50%);
            transform: translate(50%, -50%);
    margin-left: 10px;
}

.toggle-right {
    -webkit-transform: translate(-50%, -50%);
            transform: translate(-50%, -50%);
}

.toggle-left:hover {
    -webkit-transform: translate(50%, -50%) scale(1.2);
            transform: translate(50%, -50%) scale(1.2);
}

.toggle-right:hover {
    -webkit-transform: translate(-50%, -50%) scale(1.2);
            transform: translate(-50%, -50%) scale(1.2);
}

.sort-by-fattiness {
    position: relative;
    max-width: 390px;
    max-height: 36px;
    margin-right: 0;
    padding: 10px 15px;
    font-size: 16px;
    line-height: 18px;
    font-weight: 500;
    background: rgba(255, 255, 255, 0.25);
    border-radius: 20px;
    border: none;
}

.sort-by-fattiness legend {
    max-width: 180px;
    bottom: 44px;
    left: 15px;
}

.sort-by-fattiness input {
    display: none;
}

.sort-by-fattiness label {
    display: inline-block;
    position: relative;
    padding-left: 30px;
    margin-left: 15px;
    vertical-align: top;
    cursor: pointer;
}

.sort-by-fattiness label:first-of-type {
    margin-left: 0;
}

.sort-by-fattiness label::before {
    position: absolute;
    content: "";
    left: 0;
    bottom: 0;
    width: 11px;
    height: 11px;
    padding: 3px;
    border: 1px solid #fff;
    border-radius: 50%;
}

.sort-by-fattiness input:checked + label::before {
    background: #fff;
    background-clip: content-box;
}

.sort-by-fattiness label:hover::before {
    width: 11px;
    height: 11px;
    padding: 2px;
    border-width: 2px;
}

.sort-by-fattiness input:disabled + label::before {
    opacity: 0.4;
}

.sort-by-fillers {
    position: relative;
    max-width: 705px;
    max-height: 36px;
    padding: 10px 15px;
    font-size: 16px;
    line-height: 18px;
    font-weight: 500;
    background: rgba(255, 255, 255, 0.25);
    border-radius: 20px;
    border: none;
}

.sort-by-fillers legend {
    max-width: 180px;
    bottom: 45px;
    left: 15px;
}

.sort-by-fillers input {
    display: none;
}

.sort-by-fillers label {
    display: inline-block;
    position: relative;
    padding-left: 30px;
    margin-left: 15px;
    vertical-align: top;
    cursor: pointer;
}

.sort-by-fillers label:first-of-type {
    margin-left: 0;
}

.sort-by-fillers label::before {
    position: absolute;
    content: "";
    left: 0;
    bottom: -1px;
    width: 16px;
    height: 16px;
    padding: 1px;
    background: none;
    border: 1px solid rgba(255, 255, 255, 1);
    border-radius: 4px;
}

.sort-by-fillers label::after {
    position: absolute;
    content: "";
    left: 0;
    width: 16px;
    height: 16px;
}

.sort-by-fillers label:hover::before {
    width: 14px;
    height: 14px;
    border-width: 2px;
}

.sort-by-fillers input:checked + label::after {
    background: url("../img/sprite.png") -111px -142px no-repeat;  
}

.sort-by-fillers input:disabled + label:hover::before {
    width: 16px;
    height: 16px;
    border-width: 1px;
}

.sort-by-fillers input:disabled + label::after,
.sort-by-fillers input:disabled + label::before {
    opacity: 0.4;
    cursor: default;
}

.sort-by-fillers input:disabled + label {
    cursor: default;
}

.filter-btn {
    font-size: 16px;
    line-height: 18px;
    padding: 7px 28px 9px;
    color: #fff;
    border: 2px solid #fff;
    background: rgba(255, 255, 255, 0.25);
    box-shadow: none;
}

.filter-btn:hover,
.filter-btn:active {
    padding: 9px 30px 10px;
    border: none;
}
/* ... */

